<resources>
    <string name="app_name">TodoApp</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!-- Hints -->
    <string name="taskTitleHint">Enter task title</string>
    <string name="taskNoteHint">Enter your task</string>
    <string name="addCategoryHint">Enter category</string>
    <string name="notificationTitleHint">Enter Notification Title</string>
    <string name="notificationNoteHint">Enter Notification Note</string>


    <!-- Titles -->
    <string name="taskTitle">Task title</string>
    <string name="taskPriority">Priority</string>
    <string name="taskNote">What is to be done</string>
    <string name="category">Category</string>
    <string name="HighPriority">High</string>
    <string name="MediumPriority">Medium</string>
    <string name="LowPriority">Low</string>
    <string name="Date">Date</string>
    <string name="EditDate">Edit Date</string>


    <!-- Buttons -->
    <string name="addBtn">Add</string>
    <string name="editBtn">Edit</string>
    <string name="setAlarmBtn">Set Alarm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>