<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.home.editnote.EditNoteFragment"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/EditNoteFragmentTitleLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="2dp"
      >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="2dp"
            android:padding="2dp"
            android:text="@string/taskTitle"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_orange_light"
            />

        <EditText
            android:id="@+id/EditNoteFragmentTxtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:hint="@string/taskTitleHint"
            android:backgroundTint="@android:color/holo_orange_light"
            android:ems="10"
            android:text=""
            android:inputType="textPersonName" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/EditNoteFragmentNoteLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="2dp"
       >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_margin="2dp"
            android:padding="2dp"
            android:text="@string/taskNote"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_orange_light"

            />

        <EditText
            android:id="@+id/EditNoteFragmentTxtNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:hint="@string/taskNoteHint"
            android:backgroundTint="@android:color/holo_orange_light"
            android:ems="10"
            android:inputType="textPersonName" />


    </LinearLayout>


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="2dp"
       >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="2dp"
            android:padding="2dp"
            android:text="@string/category"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_orange_light"

            />

        <EditText
            android:id="@+id/EditNoteFragmentTxtCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:hint="@string/addCategoryHint"
            android:backgroundTint="@android:color/holo_orange_light"
            android:ems="10"
            android:inputType="textPersonName" />


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="2dp"
            android:padding="2dp"
            android:text="@string/taskPriority"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@android:color/holo_orange_light" />

        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"

            >

            <LinearLayout
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:padding="2dp"
                    android:text="@string/HighPriority"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="6dp">
                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:padding="2dp"
                    android:text="@string/MediumPriority"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="66dp"
                    tools:layout_editor_absoluteY="6dp">
                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:padding="2dp"
                    android:text="@string/LowPriority"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="147dp"
                    tools:layout_editor_absoluteY="6dp">
                </TextView>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <RadioGroup

                android:id="@+id/EditNoteFragmentRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/EditNoteFragmentHighPriorityRadioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp">
                </RadioButton>

                <RadioButton
                    android:id="@+id/EditNoteFragmentMediumPriorityRadioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp">
                </RadioButton>

                <RadioButton
                    android:id="@+id/EditNoteFragmentLowPriorityRadioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp">
                </RadioButton>
            </RadioGroup>


        </LinearLayout>
    </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center|bottom"
            android:layout_margin="4dp">


            <Button
                android:id="@+id/EditNoteFragmentBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:layout_margin="2dp"
                android:text="@string/editBtn"
                android:backgroundTint="@color/material_dynamic_neutral_variant20"
                />

        </LinearLayout>

</LinearLayout>
</layout>